# OPSEE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  LICENSE  README.md  opsee_workflow.ipynb  pyproject.toml  requirements.txt
data/engineering/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  DEXPI_MAPPING.md  MULTI_EXPERIMENT_DIAGRAMS.md  MULTI_EXPERIMENT_GUIDE.md  MULTI_EXPERIMENT_IMPLEMENTATION.md  PROFILE.md  WORKFLOW.md
examples/gc_calibration/: README.md
examples/temperature_optimization/: README.md
my_rocrate/data/experiments/exp_1/engineering/: QUICKSTART.md
src/: dexpi_parser.py  rocrate_builder.py  validators.py
src/opsee/: __init__.py  dexpi_extraction.py  experiment.py  rocrate_builder.py  validators.py  workflow_ui.py
src/refactor_opsee/: ui.py  widgets.py
templates/: example_dexpi.xml  experiment_parameters.yaml  profile_schema.json
