[project]
name = "opsee"
version = "0.2.0"
description = "Open Process Systems Engineering Environment - FAIR RO-Crate workflow for chemical engineering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "OPSEE Contributors"}
]
keywords = ["research-object", "ro-crate", "dexpi", "chemical-engineering", "fair-data"]

dependencies = [
    "rocrate>=0.14.0",
    "pydexpi>=1.1.0",
    "pyyaml>=6.0",
    "lxml>=5.0.0",
    "jsonschema>=4.20.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "ipyfilechooser>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opsee"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
